--- a/NodosAVls.html
+++ b/NodosAVls.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Chicho´s</title>
@@ -13,37 +13,64 @@
 </div>
 
 <div class="container"  style="padding: 10px">
-    <div class="col-lg-4">
-		<div class="input-group">
-		<input class="form-control" type="text" id="numberHolder" placeholder="Text input">
-		<span class="input-group-btn">
-			<button type="button" class="btn btn-primary" id="AddButton"  onclick="createTestingNode(); " >Add Number</button>
-			<button type="button" class="btn btn-primary" id="AddButton"  onclick="SearchButton(); " >Search</button>
-			<button type="button" class="btn btn-primary" id="AddButton"  onclick="SearchButton(); " >Print</button>
-		</div>
-	</div>
-
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="input-group">
+                <input class="form-control" type="text" id="numberHolder" placeholder="Text input">
+                <span class="input-group-btn">
+                    <button type="button" class="btn btn-primary" id="AddButton" onclick="createTestingNode(); ">Add Number</button>
+                </span>
+                <div class="col-lg-6">
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-primary" id="AddButton" onclick="Search(); ">Search</button>
+                        <button type="button" class="btn btn-primary" id="AddButton" onclick="Print(); ">Print</button>
+                        <button type="button" class="btn btn-primary" id="AddButton" onclick="ResetNode(); ">Reset Node</button>
+                    </span>
+                </div>
+               </div>
+        </div>
+    </div>
 </div>
 
-	
+    
 <div class="container" style="padding: 10px">
+    <div class="row">
+        <ul class="list-group col-md-2" id="listaNum">
+            <!-- </ul>--  <li class="list-group-item">3</li>
+             <li class="list-group-item">12</li>
+             <li class="list-group-item">8</li>
+             <li class="list-group-item">11</li>
+             <li class="list-group-item">5</li>
+             <li class="list-group-item">7</li>
+             <li class="list-group-item">4</li>
+             <li class="list-group-item">2</li>
 
-<ul class="list-group col-md-3" id="listaNum"> 
- <!-- </ul>--  <li class="list-group-item">3</li>
-  <li class="list-group-item">12</li>
-  <li class="list-group-item">8</li>
-  <li class="list-group-item">11</li>
-  <li class="list-group-item">5</li>
-  <li class="list-group-item">7</li>
-  <li class="list-group-item">4</li>
-  <li class="list-group-item">2</li> 
-  
-  
-  <li class="list-group-item">18</li> 
-  <li class="list-group-item">17</li>  -->
-  
-</ul>
+
+             <li class="list-group-item">18</li>
+             <li class="list-group-item">17</li>  -->
+
+        </ul>
+    </div>
 </div>
+    <div class="container" style="padding: 10px">
+        <div class="row">
+            <ul class="list-group col-md-3" id="treeAvl">
+                <!-- </ul>--  <li class="list-group-item">3</li>
+                 <li class="list-group-item">12</li>
+                 <li class="list-group-item">8</li>
+                 <li class="list-group-item">11</li>
+                 <li class="list-group-item">5</li>
+                 <li class="list-group-item">7</li>
+                 <li class="list-group-item">4</li>
+                 <li class="list-group-item">2</li>
+
+
+                 <li class="list-group-item">18</li>
+                 <li class="list-group-item">17</li>  -->
+
+            </ul>
+        </div>
+    </div>
 
 
 
@@ -51,13 +78,10 @@
   <script>
   
   var a = new Node ();
-  a.add(12);
-  a.add(18);
-  a.add(17);
-  a.add(8);
-  a.add(5);
-  a.add(7);
-  a.add(4);
+  a.add(10);
+  a.add(13);
+  a.add(11);
+  
   
   
   
