Print in order to Webpage

--- a/NodosAVls.html
+++ b/NodosAVls.html
@@ -10,7 +10,7 @@
 <div class="container"  >
   <h1>Javascript Exercises</h1>
   <p>Enter a number in the box and click the button.</p>
-</div>
+</div> 
 
 <div class="container"  style="padding: 10px">
     <div class="row">
@@ -18,13 +18,13 @@
             <div class="input-group">
                 <input class="form-control" type="text" id="numberHolder" placeholder="Text input">
                 <span class="input-group-btn">
-                    <button type="button" class="btn btn-primary" id="AddButton" onclick="createTestingNode(); ">Add Number</button>
+                    <button type="button" class="btn btn-primary" id="AddButton" onclick="addNumberToList(); ">Add Number</button>
                 </span>
                 <div class="col-lg-6">
                     <span class="input-group-btn">
-                        <button type="button" class="btn btn-primary" id="AddButton" onclick="Search(); ">Search</button>
-                        <button type="button" class="btn btn-primary" id="AddButton" onclick="Print(); ">Print</button>
-                        <button type="button" class="btn btn-primary" id="AddButton" onclick="ResetNode(); ">Reset Node</button>
+                        <button type="button" class="btn btn-primary" id="AddButton" onclick="search(); ">Search</button>
+                        <button type="button" class="btn btn-primary" id="AddButton" onclick="printTreeAsList(); ">Print</button>
+                        <button type="button" class="btn btn-primary" id="AddButton" onclick="resetNode(); ">Reset Node</button>
                     </span>
                 </div>
                </div>
@@ -77,10 +77,10 @@
   <script src="arbol.js"></script> 
   <script>
   
-  var a = new Node ();
-  a.add(10);
-  a.add(13);
-  a.add(11);
+  //var a = new Node ();
+  //a.add(10);
+  //a.add(13);
+  //a.add(11);
   
   
   
