--- a/NodosAVls.html
+++ b/NodosAVls.html
@@ -22,7 +22,7 @@
                 </span>
                 <div class="col-lg-6">
                     <span class="input-group-btn">
-                        <button type="button" class="btn btn-primary" id="AddButton" onclick="search(); ">Search</button>
+                        <button type="button" class="btn btn-primary" id="AddButton" onclick="searchNumber(); ">Search</button>
                         <button type="button" class="btn btn-primary" id="AddButton" onclick="printTreeAsList(); ">Print</button>
                         <button type="button" class="btn btn-primary" id="AddButton" onclick="resetNode(); ">Reset Node</button>
                     </span>
