--- a/NodosAVls.html
+++ b/NodosAVls.html
@@ -77,16 +77,31 @@
   <script src="arbol.js"></script> 
   <script>
   
-  //var a = new Node ();
-  //a.add(10);
-  //a.add(13);
-  //a.add(11);
+  let a = new Node (1);
+  a = a.add(2);
+  a = a.add(3);
+  
+  
+ let b = new Node(3);
+ b =  b.add(2);
+ b = b.add(1);
   
   
   
+  let bigA = new Node(10);
+  bigA = bigA.add(9);
+  bigA = bigA.add(20);
+  bigA = bigA.add(17);
+  bigA = bigA.add(30);
+  bigA = bigA.add(33);
   
   
-  
+  let bigB = new Node(40);
+  bigB = bigB.add(60);
+  bigB = bigB.add(20);
+  bigB = bigB.add(30);
+  bigB = bigB.add(10);
+  bigB = bigB.add(5);
   
   
   </script>
