--- a/NodosAVls.html
+++ b/NodosAVls.html
@@ -4,8 +4,9 @@
   <title>Chicho´s</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    
 </head>
-<body style="background-color:#E6E6FA">
+<body>
 
 <div class="container"  >
   <h1>Javascript Exercises</h1>
@@ -50,10 +51,28 @@
         </div>
     </div>
 
-  <script src="arbol.js"></script> 
+  
+    <div class="wood">
+        <div class="node" style="height:100px;left:20%;"> 2 </div>
+        <div class="node" style="height:150px;left:30%;"> 3 </div>
+        <div class="node" style="height:100px;left:40%;"> 4 </div>
+        <div class="node" style="height:300px;left:50%;"> C </div>
+        <div class="node" style="height:100px;left:60%;"> 5 </div>
+        <div class="node" style="height:150px;left:70%;"> 6 </div>
+        <div class="node" style="height:100px;left:80%;"> 7 </div>
+    </div>
+ 
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+
+
+
+        <script src="arbol.js"></script>
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="C:\Users\lbouzon\OneDrive - Olenick & Associates, Inc\Cursos\chicho\node.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html> 
