--- a/NodosAVls.html
+++ b/NodosAVls.html
@@ -69,9 +69,10 @@
 
 
         <script src="arbol.js"></script>
+        <script src="printTree.js"></script>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="C:\Users\lbouzon\OneDrive - Olenick & Associates, Inc\Cursos\chicho\node.css">
+    <link rel="stylesheet" type="text/css" href="node.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
