--- a/NodosAVls.html
+++ b/NodosAVls.html
@@ -51,19 +51,24 @@
         </div>
     </div>
 
-  
-    <div class="wood">
-        <div class="node" style="height:100px;left:20%;"> 2 </div>
-        <div class="node" style="height:150px;left:30%;"> 3 </div>
-        <div class="node" style="height:100px;left:40%;"> 4 </div>
-        <div class="node" style="height:300px;left:50%;"> C </div>
-        <div class="node" style="height:100px;left:60%;"> 5 </div>
-        <div class="node" style="height:150px;left:70%;"> 6 </div>
-        <div class="node" style="height:100px;left:80%;"> 7 </div>
+    <div class="container" style="padding: 10px">
+        <div class="wood" id="wood">
+            <!--<div class="node" style="height:100px;left:20%;"> 2 </div>
+            <div class="node" style="height:150px;left:30%;"> 3 </div>
+            <div class="node" style="height:100px;left:40%;"> 4 </div>
+            <div class="node" style="height:300px;left:50%;"> C </div>
+            <div class="node" style="height:100px;left:60%;"> 5 </div>
+            <div class="node" style="height:150px;left:70%;"> 6 </div>
+            <div class="node" style="height:100px;left:80%;"> 7 </div>-->
+        </div>
     </div>
- 
 
 
+    <script>
+      
+
+
+    </script>
 
 
 
@@ -72,7 +77,7 @@
         <script src="printTree.js"></script>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="node.css">
+        <link rel="stylesheet" type="text/css" href="node.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
